# kitchen_lab

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: kitchen.launch
models/BedsideTable2/: model.config  model.sdf
models/Black_Decker_CM2035B_12Cup_Thermal_Coffeemaker/: metadata.pbtxt  model.config  model.sdf
models/LampAndStand/: model.config  model.sdf
models/Pitcher_Base/: model.sdf
models/Refrigerator/: model.sdf
models/WoodenChair/: model.config  model.sdf
models/actor/: walker.dae
worlds/: kitchen.world
